# pixel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  main.cpp  matrix.frag
files/: test.lpix  test_an.lpix
include/: matrix.h
shaders/: draw.frag  grid.frag
tests/: test.cpp
